--- a/assets/css/atum-suppliers-list.css
+++ b/assets/css/atum-suppliers-list.css
@@ -4654,6 +4654,16 @@ body.post-php #wpfooter, body.post-new-php #wpfooter {
   position: relative;
 }
 
+.tablenav.top .filters-container-box #filters_container, .tablenav.top .filters-container-box .actions-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+}
+
 @media screen and (max-width: 1400px) {
   .tablenav.top .filters-container-box.no-pagination.no-submit {
     width: calc(100% - 100px);
@@ -5187,9 +5197,7 @@ body.post-php #wpfooter, body.post-new-php #wpfooter {
 
 .atum-list-wrapper .actions input, #posts-filter .actions input, .atum-list-wrapper .actions select, #posts-filter .actions select, .atum-list-wrapper .actions .select2-container, #posts-filter .actions .select2-container {
   height: 30px;
-  margin: 0 0 0 5px;
   float: none;
-  vertical-align: middle;
 }
 
 .atum-list-wrapper .actions input .select2-selection__arrow, #posts-filter .actions input .select2-selection__arrow, .atum-list-wrapper .actions select .select2-selection__arrow, #posts-filter .actions select .select2-selection__arrow, .atum-list-wrapper .actions .select2-container .select2-selection__arrow, #posts-filter .actions .select2-container .select2-selection__arrow {
@@ -5377,7 +5385,8 @@ body.post-php #wpfooter, body.post-new-php #wpfooter {
       flex-wrap: nowrap;
   cursor: -webkit-grab;
   cursor: grab;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: visible;
   -ms-overflow-style: -ms-autohiding-scrollbar;
   -webkit-overflow-scrolling: touch;
   white-space: nowrap;
@@ -5396,6 +5405,10 @@ body.post-php #wpfooter, body.post-new-php #wpfooter {
 
 .nav-with-scroll-effect.dragging a {
   pointer-events: none;
+}
+
+.nav-with-scroll-effect .input-group {
+  position: static;
 }
 
 .overflow-opacity-effect-right, .overflow-opacity-effect-left {
