--- a/assets/scss/molecules/_list-table.scss
+++ b/assets/scss/molecules/_list-table.scss
@@ -868,6 +868,12 @@
 		.filters-container-box {
 			position: relative;
 			
+			#filters_container, .actions-wrapper {
+				display: flex;
+				align-items: center;
+				gap: 10px;
+			}
+			
 			&.no-pagination {
 				&.no-submit {
 					@media screen and (max-width: $screen-lg-max + 200px) {
@@ -1308,7 +1314,6 @@
 			}
 			
 			@include tablet-max-wp {
-			
 				display: block;
 				float: left;
 				
@@ -1340,9 +1345,7 @@
 		
 		input, select, .select2-container {
 			height: 30px;
-			margin: 0 0 0 5px;
 			float: none;
-			vertical-align: middle;
 			
 			.select2-selection__arrow {
 				@include dropdown-arrow;
@@ -1516,7 +1519,8 @@
 	justify-content: space-between;
 	flex-wrap: nowrap;
 	cursor: grab;
-	overflow: hidden;
+	overflow-x: hidden;
+	overflow-y: visible;
 	-ms-overflow-style: -ms-autohiding-scrollbar;
 	-webkit-overflow-scrolling: touch;
 	white-space: nowrap;
@@ -1536,6 +1540,10 @@
 		a {
 			pointer-events: none;
 		}
+	}
+	
+	.input-group {
+		position: static;
 	}
 	
 }
